fixed countup to load when visible

--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,6 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 1px solid blue;
 }
 #about-icons {
   display: flex;
@@ -206,13 +205,12 @@ h4 {
 }
 .countup {
   grid-area: "countup";
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   display: flex;
   flex-direction: row;
   background-color: #3c6676;
   color: white;
-  border: 1px solid red;
 }
 .tea {
   color: white;
@@ -220,6 +218,10 @@ h4 {
 .code {
   color: white;
 }
+.count {
+  font-size: 5rem;
+}
+
 #how-section {
   grid-area: "how";
   display: flex;
